--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
             <div class="column-1">
               <h1 class="header-title">M. Viduranga</h1>
               <p class="text">
-                Hello, I'm Mahesha Viduranga, Electrical and Electronic Engineer. A trustworthy and responsible undergraduate hardworking to be
-                successful in industry with skills present.
+                "innovate to serve people in need"
               </p>
               <a href="https://drive.google.com/file/d/1Ime7gB-iXkP9ggIQajZpzvMio3kFXOZ-/view?usp=drive_link" class="btn">Download CV</a>
             </div>
