Update thesis competition achievement

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
           <div class="section-header">
             <h3 class="title" data-title="Explore">My Achievements</h3>
             <p class="text">
-              Hardworking, determination and dedication always,
+              Hardworking, determined, and dedicated always,
             </p>
           </div>
 
@@ -386,7 +386,30 @@
                 </div>
               </div>
             </div>
+ 
+            <div class="blog-wrap">
+              <div class="blog-card">
+                <div class="blog-image">
+                  <img src="./img/blog2.jpeg" alt="" />
+                </div>
 
+                <div class="blog-content">
+                  <div class="blog-info">
+                    <h5 class="blog-date">November, 01 2022</h5>
+                    <h5 class="blog-user"><i class="fas fa-user"></i>Admin</h5>
+                  </div>
+                  <h3 class="title-sm">🏆 Winner - Undergrad Thesis Project Competition 2023</h3>
+                  <p class="blog-text">
+                    On November 4th, 2023, the IEEE Signal Processing Society Chapter of Sri Lanka (IEEE-SPS-SL), 
+                    in collaboration with the IEEE Sri Lanka Section Student/YP/WIE Congress (IEEE SLSYW), organized the 
+                    "Undergrad Thesis Project Competition 2023" at Carolina Beach Hotel in Chilaw. The competition included teams 
+                    from all the Engineering faculties of state universities. We secured the First place in the competition. 
+                  </p>
+                  <a href="https://web2.ee.pdn.ac.lk/events/winners-undergrad-thesis-project-competition-2023" class="btn small">Read more</a>
+                </div>
+              </div>
+            </div>
+            
             <div class="blog-wrap">
               <div class="blog-card">
                 <div class="blog-image">
