Update winner achievement photo

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
             <div class="blog-wrap">
               <div class="blog-card">
                 <div class="blog-image">
-                  <img src="./img/blog2.jpeg" alt="" />
+                  <img src="./img/blog5.png" alt="" />
                 </div>
 
                 <div class="blog-content">
